--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker build -t your-image-name .
-          docker tag your-image-name:latest ${{ steps.ecr-login.outputs.registry }}/${{ secrets.AWS_ACCOUNT_ID }}/spotify:latest
+          docker tag spotify:latest ${{ steps.ecr-login.outputs.registry }}/${{ secrets.AWS_ACCOUNT_ID }}/spotify:latest
           docker push ${{ steps.ecr-login.outputs.registry }}/${{ secrets.AWS_ACCOUNT_ID }}/spotify:latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
