--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build, Tag, and Push the Image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REGISTRY: 994627049189.dkr.ecr.ap-south-1.amazonaws.com/spotify
         ECR_REPOSITORY: spotify
         IMAGE_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |
